# competitor-insights-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  api-spec.md  docker-compose.yml  mvp-scope.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/businesses/: apps.py  models.py
backend/apps/businesses/migrations/: 0001_initial.py
backend/apps/common/: apps.py  exceptions.py  logging.py
backend/apps/comparisons/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/comparisons/migrations/: 0001_initial.py
backend/apps/providers/: apps.py  data_providers.py  llm_providers.py  mock_data.json
backend/config/: urls.py
backend/config/settings/: base.py
design/: Introduction.md  README.md  coding_style.md  design.md  optimization-roadmap.md  project-analysis.md  technical-architecture-deep-dive.md  user-story.md  writing_good_interfaces.md
frontend/: .eslintignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: ErrorMessage.vue  FeatureCard.vue  LoadingSpinner.vue
frontend/src/components/business/: BusinessProfileCard.vue  BusinessSearchForm.vue
frontend/src/router/: index.ts
frontend/src/services/: comparisonService.ts
frontend/src/stores/: comparisonStore.ts
frontend/src/types/: comparison.ts
frontend/src/views/: ComparisonView.vue  HomeView.vue  ReportView.vue
(+6 files in other folders)
